# tar-no-std

./: CHANGELOG.md  Cargo.toml  README.md  build.sh
.github/workflows/: dependabot-auto-merge.yml  qa.yml  rust.yml
examples/: alloc_feature.rs  minimal.rs
src/: archive.rs  fixed_len_string.rs  header.rs  lib.rs  tar_format_types.rs
tests/: README.md  bye_world_513b.txt  gnu_tar_default.tar  gnu_tar_default_with_dir.tar  gnu_tar_pax.tar  gnu_tar_posix.tar  gnu_tar_ustar.tar  gnu_tar_ustar_deep.tar  gnu_tar_ustar_long.tar  gnu_tar_v7.tar  mac_tar_ustar_with_dir.tar  tar_content_subset_for_recreating_tar_files.tar  weird_fuzzing_tarballs.tar
