[package]
name = "tar-no-std"
description = """
Library to read Tar archives (by GNU Tar) in `no_std` contexts with zero allocations.
The crate is simple and only supports reading of "basic" archives, therefore no extensions, such
as GNU Longname. The maximum supported file name length is 100 characters including the NULL-byte.
The maximum supported file size is 8GiB. Also, directories are not supported yet but only flat
collections of files.
"""
version = "0.2.0"
edition = "2021"
keywords = ["tar", "tarball", "archive"]
categories = ["data-structures", "no-std", "parser-implementations"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/tar-no-std"
repository = "https://github.com/phip1611/tar-no-std"
documentation = "https://docs.rs/tar-no-std"

# required because "env_logger" uses "log" but with dependency to std..
resolver = "2"

[features]
default = []
alloc = []

[dependencies]
arrayvec = { version = "0.7", default-features = false }
bitflags = "2.0"
log = { version = "0.4", default-features = false }

[dev-dependencies]
env_logger = "0.10"
