[package]
name = "tar-no-std"
description = """
Library to read Tar archives (by GNU Tar) in `no_std` contexts with zero allocations.
The crate is simple and only supports reading of "basic" archives, therefore no extensions, such
as GNU Longname. The maximum supported file name length is 256 characters excluding the NULL-byte
(using the tar name/prefix longname implementation).The maximum supported file size is 8GiB.
Directories are supported, but only regular fields are yielded in iteration.
"""
version = "0.3.2"
edition = "2021"
keywords = ["tar", "tarball", "archive"]
categories = ["data-structures", "no-std", "parser-implementations"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/tar-no-std"
repository = "https://github.com/phip1611/tar-no-std"
documentation = "https://docs.rs/tar-no-std"
rust-version = "1.76.0"

# required because "env_logger" uses "log" but with dependency to std.
resolver = "2"

[features]
default = []
alloc = []
unstable = [] # requires nightly

[[example]]
name = "alloc_feature"
required-features = ["alloc"]

[dependencies]
bitflags = "2.5"
log = { version = "0.4", default-features = false }
memchr = { version = "2.7", default-features = false }
num-traits =  { version = "~0.2", default-features = false }

[dev-dependencies]
env_logger = "0.11"

[package.metadata.docs.rs]
all-features = true
